--- a/index.html
+++ b/index.html
@@ -6,9 +6,22 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
+        </nav>
+    </header>
     
-
-    <h2>xablão</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, sunt.</p>
+   <main>
+      <section>
+          <h2>xablão</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, sunt.</p>
+      </section>
+   </main>
 </body>
 </html>
